Added All updates to the api, frontend, and rag system

--- a/notebooks/Exploratory_Data_Analysis.ipynb
+++ b/notebooks/Exploratory_Data_Analysis.ipynb
@@ -703,8 +703,7 @@
     "- **Recovery_Classification:** Most patients had a delayed recovery.  \r\n",
     "- **Doses_Received:** For vaccinated patients, there is a balanced ratio among those who received 1, 2, or 3 doses.  \r\n",
     "\r\n",
-    "> **Note:** The `Symptoms` and `Severity` columns have similar values, so one of thm should be dropped.\r\n",
-    "ry_Classification     150"
+    "> **Note:** The `Symptoms` and `Severity` columns have similthemvalues, so one of tClassification     150"
    ]
   },
   {
